tests/snapshots/snapshots_from_examples__recurring_log_example.snap
---
source: tests/snapshots_from_examples.rs
assertion_line: 19
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: completed,
    name: "Take out trash",
    doDateTime: Some("2025-01-07T19:00:00-08:00"),
    completedDate: Some("2025-01-07T19:15:00-08:00"),
  ),
  Action(
    id: "[uuid]",
    state: completed,
    name: "Take out trash",
    doDateTime: Some("2025-01-14T19:00:00-08:00"),
    completedDate: Some("2025-01-14T19:32:00-08:00"),
  ),
  Action(
    id: "[uuid]",
    state: completed,
    name: "Take out trash",
    doDateTime: Some("2025-01-21T19:00:00-08:00"),
    completedDate: Some("2025-01-21T18:45:00-08:00"),
  ),
  Action(
    id: "[uuid]",
    state: completed,
    name: "Daily standup",
    doDateTime: Some("2025-01-20T09:00:00-08:00"),
    completedDate: Some("2025-01-20T09:05:00-08:00"),
  ),
  Action(
    id: "[uuid]",
    state: completed,
    name: "Daily standup",
    doDateTime: Some("2025-01-21T09:00:00-08:00"),
    completedDate: Some("2025-01-21T09:03:00-08:00"),
  ),
  Action(
    id: "[uuid]",
    state: completed,
    name: "Daily standup",
    doDateTime: Some("2025-01-22T09:00:00-08:00"),
    completedDate: Some("2025-01-22T09:07:00-08:00"),
  ),
  Action(
    id: "[uuid]",
    state: cancelled,
    name: "Daily standup",
    doDateTime: Some("2025-01-23T09:00:00-08:00"),
    completedDate: Some("2025-01-23T09:00:00-08:00"),
  ),
  Action(
    id: "[uuid]",
    state: completed,
    name: "Monthly rent",
    doDateTime: Some("2025-01-01T00:00:00-08:00"),
    completedDate: Some("2025-01-01T10:30:00-08:00"),
  ),
]
