tests/snapshots/snapshots_from_examples__recurring_templates.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Take out trash",
    doDateTime: Some("2025-01-21T19:00:00-08:00"),
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Daily standup",
    doDateTime: Some("2025-01-20T09:00:00-08:00"),
    doDuration: Some(15),
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Monthly rent",
    doDateTime: Some("2025-02-01T00:00:00-08:00"),
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Quarterly review",
    doDateTime: Some("2025-04-01T00:00:00-07:00"),
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Birthday reminder",
    doDateTime: Some("2025-06-15T00:00:00-07:00"),
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Biweekly newsletter",
    doDateTime: Some("2025-01-20T10:00:00-08:00"),
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "First Monday of month meeting",
    doDateTime: Some("2025-02-03T10:00:00-08:00"),
    doDuration: Some(60),
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Last Friday social",
    doDateTime: Some("2025-01-31T17:00:00-08:00"),
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Weekday medication",
    doDateTime: Some("2025-01-20T08:00:00-08:00"),
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Water plants",
    doDateTime: Some("2025-01-20T00:00:00-08:00"),
  ),
]
