tests/snapshots/snapshots_from_examples__test_description_predecessor.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Task with description",
    description: Some("This is my description"),
    priority: None,
    contexts: None,
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: Some([
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
    ]),
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
  ),
]
