tests/snapshots/snapshots_from_examples__with_alias.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Get the project documentation completed",
    description: Some("This is a long-running task to create comprehensive documentation"),
    priority: Some(2),
    contexts: Some([
      "Work",
      "Writing",
    ]),
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("Documentation"),
    alias: Some("docs"),
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Review the API documentation",
    description: Some("Check for accuracy and completeness"),
    priority: Some(2),
    contexts: Some([
      "Work",
      "Review",
    ]),
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: Some([
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
    ]),
    charter: Some("Documentation"),
    alias: Some("api-review"),
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Set up the staging environment",
    description: Some("Configure servers and deploy"),
    priority: Some(1),
    contexts: Some([
      "DevOps",
    ]),
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("Infrastructure"),
    alias: Some("staging"),
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Run integration tests against staging",
    description: None,
    priority: Some(2),
    contexts: Some([
      "DevOps",
      "QA",
    ]),
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: Some([
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
    ]),
    charter: Some("Testing"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Final documentation review",
    description: Some("Last pass before release"),
    priority: Some(3),
    contexts: Some([
      "Work",
    ]),
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: Some([
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
    ]),
    charter: Some("Documentation"),
    alias: Some("final-docs-review"),
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
]
