tests/snapshots/snapshots_from_examples__with_children.snap
---
source: tests/snapshots_from_examples.rs
assertion_line: 19
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: completed,
    name: "Parent task",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Child task one",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Grandchild task",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Child task two",
  ),
]
