tests/snapshots/snapshots_from_examples__with_children_and_second_root.snap
---
source: tests/snapshots_from_examples.rs
assertion_line: 19
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: not_started,
    name: "First root task",
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Child of first",
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Second root task",
    createdDate: "[timestamp]",
  ),
]
