tests/snapshots/snapshots_from_examples__with_description.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: completed,
    name: "buy milk",
    description: Some("from the organic section"),
  ),
]
